<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"
    android:background="@color/purple">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"

        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="344dp"
            android:layout_height="625dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="34dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/registro"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombreregistrotxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"

                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/nameuser"

                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/apellidosregistrotxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"

                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/apellidos"

                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />


            <EditText
                android:id="@+id/telefonoregistro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"

                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/telefono"

                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />


            <EditText
                android:id="@+id/mailregistro"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/user"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/passwordregistro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"

                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/passwordRepetidaregistro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"

                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/passwordRepe"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />


            <Button
                android:id="@+id/RegistroButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                android:text="@string/registrarse"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>